--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
   },
   "dependencies": {
     "@collabland/sdk": "^0.61.0",
+    "@headlessui/react": "^2.2.2",
     "@rainbow-me/rainbowkit": "^2.0.2",
     "@tanstack/react-query": "^5.22.2",
     "autoprefixer": "^10.4.19",
+    "ethers": "^6.13.7",
+    "framer-motion": "^12.9.2",
+    "lucide-react": "^0.503.0",
+    "multer": "^1.4.5-lts.2",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.1",
     "viem": "^2.7.12",
     "wagmi": "^2.5.7"
